--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>上海旅游景点实时客流概览</title>
+    <title>上海旅游景点客流</title>
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js"></script>
     <style>
         body {
@@ -81,11 +81,102 @@
             font-size: 14px;
             margin-bottom: 10px;
         }
+        .contact-container {
+            text-align: center;
+            margin-bottom: 20px;
+            padding: 10px 0 0 0;
+            color: #606266;
+        }
+        .contact-top {
+            border: none;
+            margin-top: 0;
+        }
+        .contact-icons {
+            display: flex;
+            justify-content: end;
+            gap: 20px;
+            margin-top: 0;
+            align-items: center;
+        }
+        .wechat-wrapper {
+            position: relative;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+        }
+        .wechat-wrapper svg, .email-link svg {
+            width: 32px;
+            height: 32px;
+            fill: #07C160;
+            transition: fill 0.3s;
+        }
+        .wechat-svg {
+            width: 32px;
+            height: 32px;
+            fill: #07C160 !important;
+            color: #07C160 !important;
+            transition: filter 0.3s;
+        }
+        .wechat-wrapper:hover .wechat-svg {
+            filter: brightness(0) saturate(100%) invert(54%) sepia(97%) saturate(749%) hue-rotate(77deg) brightness(97%) contrast(101%);
+        }
+        .email-link:hover svg {
+            fill: #409eff;
+        }
+        .qr-popup {
+            display: none;
+            position: absolute;
+            top: 110%;
+            left: 50%;
+            transform: translateX(-50%);
+            background: white;
+            padding: 10px;
+            box-shadow: 0 2px 12px 0 rgba(0,0,0,0.1);
+            border-radius: 4px;
+            margin-top: 10px;
+            z-index: 1000;
+        }
+        .qr-popup img {
+            width: 150px;
+            height: 150px;
+            display: block;
+        }
+        .wechat-wrapper:hover .qr-popup {
+            display: block;
+        }
+        .qr-popup::after {
+            content: '';
+            position: absolute;
+            top: -12px;
+            left: 50%;
+            margin-left: -6px;
+            border-width: 6px;
+            border-style: solid;
+            border-color: transparent transparent white transparent;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>上海旅游景点实时客流概览</h1>
+        <h1>上海旅游景点客流</h1>
+                <!-- 联系方式区域上移 -->
+                <div class="contact-container contact-top">
+                    <div class="contact-icons">
+                        <p>如想获取完整数据, 联系方式：</p>
+                        <div class="wechat-wrapper" title="微信联系">
+                            <!-- 使用外部SVG文件 -->
+                            <object type="image/svg+xml" data="data/wechat.svg" class="wechat-svg" style="width:32px;height:32px;fill:#07C160;"></object>
+                            <div class="qr-popup">
+                                <img src="wechat.png" alt="WeChat QR Code">
+                            </div>
+                        </div>
+                        <a href="mailto:ppsteven@outlook.com" class="email-link" title="发送邮件">
+                            <svg viewBox="0 0 24 24">
+                                <path d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8l-8,5L4,8V6l8,5l8-5V8z"/>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
         <div id="update-time" class="update-time"></div>
 
         <div class="card">
@@ -125,6 +216,9 @@
                 </table>
             </div>
         </div>
+
+        <div class="contact-container">
+            <!-- 联系方式区域已上移 -->
     </div>
 
     <script>
