--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,8 @@
             font-family: 'PingFang SC', 'Microsoft YaHei', sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #f5f7fa;
+            background: linear-gradient(135deg, #f5f7fa 0%, #e4edf9 100%);
+            min-height: 100vh;
         }
         .container {
             max-width: 1200px;
